--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,5 @@ data/**
 !data/miRAW_Test9.txt
 !data/miRAW_Test_total.txt
 !data/miRAW_Train_Validation.txt
+!data/miRAW_Test1-5_split-ratio-0.9_Train_Validation.txt
+!data/miRAW_Test_0,6-9.txt
