--- a/configs/experiment/miRAW_TargetNet.yaml
+++ b/configs/experiment/miRAW_TargetNet.yaml
@@ -17,8 +17,8 @@ data:
     test: "data/miRAW_Test_total.txt"
 
 run:
-  num_epochs: 50
-  batch_size: 256
+  num_epochs: 100
+  batch_size: 512
 
   reduction: "softmax"          # 统一控制
   # reduction: "max"
@@ -52,13 +52,13 @@ model:
 
 train:
   # --- 优化器 & 学习率 ---
-  optimizer: rmsprop              # ["adamw", "adam", "sgd", "rmsprop"]
-  lr: 0.001
-  weight_decay: 0.01
+  optimizer: adamw              # ["adamw", "adam", "sgd", "rmsprop"]
+  lr: 0.005
+  weight_decay: 0.0
   momentum: 0.9                # 仅对 SGD 有效
 
   # --- 学习率调度器 ---
-  scheduler: plateau              # ["none", "plateau", "cosine", "step"]
+  scheduler: cosine           # ["none", "plateau", "cosine", "step"]
   scheduler_factor: 0.2        # for ReduceLROnPlateau
   scheduler_patience: 5
   scheduler_t_max: 10          # for CosineAnnealingLR
@@ -68,18 +68,18 @@ train:
   # --- 损失 & 数值稳定 ---
   # === Stage 0.1: class weighting + label smoothing ===
   pos_weight: 1.0       # 1.0 = 不加权
-  label_smoothing: false
+  label_smoothing: true
   smooth_pos: 0.95       # label_smoothing=false 时不生效
   smooth_neg: 0.05
   # === Stage 0.2: Focal Loss ===
-  loss_type: bce          # ["bce", "focal", "bce_focal"]
+  loss_type: bce_focal          # ["bce", "focal", "bce_focal"]
   focal_gamma: 1.0
   focal_alpha: 0.4
   focal_lambda: 1
   bce_lambda: 0.01 # bce_loss 数值一般在focal_loss的十倍
   # bce_focal = bce_lambda * bce_loss + focal_lambda * focal_loss
   # === Stage 0.3: esa weight(window-size) ===
-  esa_weighting: false
+  esa_weighting: true
   esa_scale: 10.0     # ESA 归一化尺度，esa_norm = clamp(score / esa_scale, 0..1)
   esa_lambda_pos: 1.0 # 正样本 ESA 权重系数
   esa_lambda_neg: 0.5 # 负样本 ESA 权重系数（一般从 0 或 0.5 小试）
@@ -87,12 +87,12 @@ train:
 
 
 
-  amp: true                    # 是否使用混合精度
+  amp: true                   # 是否使用混合精度
   grad_clip: 1.0               # None 或 float
 
   # --- EMA（可选） ---
   ema:
-    enabled: false
+    enabled: true
     decay: 0.999
 
   # --- 监控指标（决定 best.pt 保存逻辑） ---
