--- a/.gitignore
+++ b/.gitignore
@@ -28,18 +28,18 @@ logs/
 *.out
 
 # 数据文件（按自己需求调整）
-data/**
-!data/miRAW_Test0.txt
-!data/miRAW_Test1.txt
-!data/miRAW_Test2.txt
-!data/miRAW_Test3.txt
-!data/miRAW_Test4.txt
-!data/miRAW_Test5.txt
-!data/miRAW_Test6.txt
-!data/miRAW_Test7.txt
-!data/miRAW_Test8.txt
-!data/miRAW_Test9.txt
-!data/miRAW_Test_total.txt
-!data/miRAW_Train_Validation.txt
-!data/miRAW_Test1-5_split-ratio-0.9_Train_Validation.txt
-!data/miRAW_Test_0,6-9.txt
+# # data/**
+# !data/miRAW_Test0.txt
+# !data/miRAW_Test1.txt
+# !data/miRAW_Test2.txt
+# !data/miRAW_Test3.txt
+# !data/miRAW_Test4.txt
+# !data/miRAW_Test5.txt
+# !data/miRAW_Test6.txt
+# !data/miRAW_Test7.txt
+# !data/miRAW_Test8.txt
+# !data/miRAW_Test9.txt
+# !data/miRAW_Test_total.txt
+# !data/miRAW_Train_Validation.txt
+# !data/miRAW_Test1-5_split-ratio-0.9_Train_Validation.txt
+# !data/miRAW_Test_0,6-9.txt
