--- a/.gitignore
+++ b/.gitignore
@@ -44,6 +44,8 @@ data/**
 !data/miRAW_Train_Validation.txt
 !data/miRAW_Test1-5_split-ratio-0.9_Train_Validation.txt
 !data/miRAW_Test_0,6-9.txt
+!data/miRAW_filter_policy/
+!data/miRAW_filter_policy/**
 
 
 # re-include these directories (directory itself first!)
